# text-summarization

./: README.md  main.py  pyproject.toml
src/: app.py
